gitops/apps/portfolio/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: portfolio
spec:
  selector:
    app: portfolio
  ports:
  - port: 80
    targetPort: 80
  type: LoadBalancer
