gitops/apps/portfolio/manifests/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portfolio-beta-ingress
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web
    uptime-kuma.io/monitor: "true"
    argocd.argoproj.io/sync-options: SkipDryRunOnMissingResource=true
spec:
  ingressClassName: traefik
  rules:
  - host: portfolio.batchelorparty.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: portfolio-beta-service
            port:
              number: 80
